debug toggle content so it is visible, change header position to relative instead of fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200..700&display=swap');
 
-lato google font 
+
 /* asterisk is the wildcard selector which ensures that the website does not put the default layout in*/
 * {
     padding: 0;
@@ -26,10 +26,13 @@ body {
 header {
     background-color: #ffffff;
     padding: 0 1rem;
-    position: fixed;
+    position: relative;
     z-index: 99;
     width: 100%;
     box-shadow: 0 2px 2px #3a3a3a;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 }
 header a {
     text-decoration: none;
@@ -54,8 +57,7 @@ h1 {
 }
 
 .active {
-    border-bottom: 1px solid;
-    color: 3a3a3a;
+    border-bottom: 1px solid #3a3a3a;
 }
 
 /* Navbar style with dropdown toggle */
@@ -64,8 +66,15 @@ nav {
     background-color: #ffffff;
     width: 100%;
     left: 0;
+    padding: 0 1rem;
     box-shadow: 0 2px 2px #3a3a3a;
     display: none;
+    top: 100%;
+}
+
+/* nav toggle */
+#nav-toggle:checked ~ nav {
+    display: block;
 }
 
 /* main content */
